<resources>
    <string name="app_name">Test App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_world">\@string/hello_world</string>
    <string name="Hello_World">Hello World!</string>
    <string name="_5">5</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="slash">/</string>
    <string name="multiply">*</string>
    <string name="_6">6</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="subtract">-</string>
    <string name="addition">+</string>
    <string name="equal">=</string>
    <string name="_0">0</string>
    <string name="decimal">.</string>
    <string name="_7">7</string>
    <string name="clear">Clear</string>
</resources>